--- a/BS_shopCompare/src/main/resources/application.properties
+++ b/BS_shopCompare/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 spring.application.name=BS_shopCompare
 server.port=8000
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=
+spring.data.redis.timeout=2000
+
+spring.mail.host=smtp.163.com
+spring.mail.port=587
+spring.mail.username=zju229_project@163.com
+spring.mail.password=NA6fEx6JnxNdUwYG
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable=true
