--- a/bs_frontend/package.json
+++ b/bs_frontend/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "echarts": "^5.5.1",
+    "lodash-es": "^4.17.21",
     "pinia": "^2.2.6",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
