--- a/bs_frontend/package.json
+++ b/bs_frontend/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "echarts": "^5.5.1",
     "lodash-es": "^4.17.21",
     "pinia": "^2.2.6",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
