修复了build前端的文件，完成了docker部署，添加了一些手册

--- a/BS_shopCompare/src/main/resources/application.properties
+++ b/BS_shopCompare/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.mail.password=NA6fEx6JnxNdUwYG
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 
+spring.sql.init.mode = ALWAYS
