--- a/BS_shopCompare/src/main/resources/application.yml
+++ b/BS_shopCompare/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
-    datasource:
+  datasource:
       driver-class-name: com.mysql.cj.jdbc.Driver
       url: jdbc:mysql://localhost:3306/bs_shopcompare
       username: root
       password: 64793416zhu
+
+  sql:
+    init:
+      schema-locations: classpath:db/schema.sql
