--- a/BS_shopCompare/src/main/resources/application.properties
+++ b/BS_shopCompare/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=BS_shopCompare
 server.port=8000
-spring.data.redis.host=localhost
+spring.data.redis.host=redis
 spring.data.redis.port=6379
 spring.data.redis.password=
 spring.data.redis.timeout=2000
